--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ beautifulsoup4==4.13.4
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.1.8
 curl_cffi==0.11.4
 Deprecated==1.2.18
 deprecation==2.1.0
@@ -65,6 +66,7 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.34.3
 websockets==15.0.1
 wrapt==1.17.2
 yarl==1.20.1
